app/assets/stylesheets/application.scss
/*
* Robinson Greig
* Copyright 2016
*/


/* Table of Contents
==================================================
    #Generic styles
    #Element spacing
	#Header
	#Side navbar
	#Sticky navbar
	#Data Table
	#Footer
	#Responsive
	#New resource form

/* #Basic elements
================================================== */

@import "normalize";
@import "bourbon";
@import "neat";
@import "scaffolds";
@import "resources";
@import "semantic-ui";

@import 'https://fonts.googleapis.com/css?family=Anonymous+Pro:400';
$black: #0A2126;

html {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body{
	color: $black;
	overflow-x: hidden !important;
	overflow-y: visible;
}

h1, h2, h3{
	font-family: "brandon-grotesque", sans-serif;
}

h1 {
    
    font-size: 64px;
    font-weight: 900;
    line-height: 1.20;
    opacity: 1.00;
    margin-top: 0px;
    margin-bottom: 10px;
    letter-spacing: -0.50px;
    word-spacing: 0.00px;
    text-transform: none;
}

h2 {
    font-size: 36px;
    font-weight: 500;
    line-height: 1.20;
    opacity: 1.00;
    margin-top: 60px;
    margin-bottom: 5px;
    letter-spacing: 0.00px;
    word-spacing: 0.00px;
    text-transform: none;
}



h3 {
    font-size: 24px;
    font-weight: 400;
    line-height: 1.20;
    opacity: 1.00;
    margin-top: 30px;
    margin-bottom: 5px;
    letter-spacing: 0.00px;
    word-spacing: 0.00px;
    text-transform: none;
}

p, li {
    font-family: "Source Sans Pro", sans-serif;
    font-size: 18px;
    line-height: 1.60;
    opacity: 0.70;
    letter-spacing: -0.20px;
    word-spacing: 0.20px;
    text-transform: none;
}

p{
	margin-top: 15px;
    margin-bottom: 25px;
    font-weight: 400;
}

li{
	font-weight: 200;
}

ul{
	list-style-type: none;
	padding: 0;
	margin-top: 0.5em;
}

a, a:visited, a:focus{
	color: $black;
	text-decoration: none;
}

a:hover{
	background-color: transparent;
	color: $black;
}

/* #Element Spacing
================================================== */

.header, .announcement, .mainContent, footer {
    @include span-columns(10);
	@include shift(1);
}

.sideNav{
	@include span-columns(3 of 10);
}

.dataTable{
	@include span-columns(7 of 10);
}

.sideNav-scrolled + .dataTable {
  	@include shift(3);
}


/* #Header
================================================== */

.header{
	.logo{
		font-weight: 900;
		float: left;
		margin: 20px 0;
		-webkit-text-stroke: 0.5px #95a5a6;
		color: white;
		font-size: 30px;
	}
	p{
		float: right;
		margin: 29px 0 0 50px !important;
		font-weight: 800;
	}
}

.announcement{
	margin: 0;
	width: 100%;
	padding: 100px 8.5298%;
}

/* #Side navbar
================================================== */

.mainContent{
	margin-top: 40px;
	padding-bottom: 100px;
	.sideNav{
		margin-right: 2.79%;
	}
}

.navItem{
	display: block;
	width: 100%;
	height: 20px;
	clear: both;
}

.navItem:nth-child(1){
	.navMarker{
		background: #EDB0B1;
	}
	.navMarker > i{
		border-left: 10px solid #EDB0B1;
		border-top: 10px solid #EDB0B1;
	}
}

.navItem:nth-child(2){
	.navMarker{
		background: #F8DCB6;
	}
	.navMarker > i{
		border-left: 10px solid #F8DCB6;
		border-top: 10px solid #F8DCB6;
	}
}

.navItem:nth-child(3){
	.navMarker{
		background: #D9EDB0;
	}
	.navMarker > i{
		border-left: 10px solid #D9EDB0;
		border-top: 10px solid #D9EDB0;
	}
}

.navItem:nth-child(4){
	.navMarker{
		background: #B0EDB0;
	}
	.navMarker > i{
		border-left: 10px solid #B0EDB0;
		border-top: 10px solid #B0EDB0;
	}
}

.navItem:nth-child(5){
	.navMarker{
		background: #B0EDD7;
	}
	.navMarker > i{
		border-left: 10px solid #B0EDD7;
		border-top: 10px solid #B0EDD7;
	}
}

.navItem:nth-child(6){
	.navMarker{
		background: #B0DAED;
	}
	.navMarker > i{
		border-left: 10px solid #B0DAED;
		border-top: 10px solid #B0DAED;
	}
}

.navItem:nth-child(7){
	.navMarker{
		background: #B0B1ED;
	}
	.navMarker > i{
		border-left: 10px solid #B0B1ED;
		border-top: 10px solid #B0B1ED;
	}
}

.navItem:nth-child(8){
	.navMarker{
		background: #D4B0ED;
	}
	.navMarker > i{
		border-left: 10px solid #D4B0ED;
		border-top: 10px solid #D4B0ED;
	}
}

.navItem:nth-child(9){
	.navMarker{
		background: #EDB0E1;
	}
	.navMarker > i{
		border-left: 10px solid #EDB0E1;
		border-top: 10px solid #EDB0E1;
	}
}

.navItem:nth-last-child(3){
	.navMarker{
		background: #F1F1F1;
	}
	.navMarker > i{
		border-left: 10px solid #F1F1F1;
		border-top: 10px solid #F1F1F1;
	}
	margin-top: 60px;
}

.navItem:nth-last-child(2){
	.navMarker{
		background: none;
	}
	.navMarker > i{
		border-left: none;
		border-top: none;
	}
}

.credit{
	text-decoration: underline;
	img{
		height: 18px;
	}
}

.tweetThis{
	margin: 20px 0 0 32px !important;
}

.navMarker {
  display: inline-block;
  height: 20px;
  width: 50px;
  float: left;
  position: relative;
}

.navMarker > i{
	position: absolute;
    width: 0;
    height: 0;
    line-height: 0;
    border: 10px solid transparent;
    left: 50px;
    top: 0px;
}

.navItem:hover, .activeNavItem{
	.navMarker{
		width: 80px;
	}
	.navMarker > i{
		left: 80px;
	}
	li{
		margin-left: -45px;
	}
}

li{
	margin: -5px 0 20px -15px;
	float: left;
	clear: right;
}

.navMarker, .navMarker > i, li {
	transition-timing-function: ease;
  	transition: 0.25s;
}

/* #Sticky navbar
================================================== */

.sideNav-scrolled {
  position: fixed;
  margin-top: 38px;
  top: 0;
}

/* #Data Table
================================================== */

.dataTable h2:first-child{
	margin-top: 0;
}

.dataTable h2{
	clear: both;
}

.breakerBar{
	height: 10px;
	width: 50px;
}

.dataTable{
	h2:nth-of-type(1) + .breakerBar{
		background-color: #EDB0B1;
	}

	h2:nth-of-type(2) + .breakerBar{
		background-color: #F8DCB6;
	}

	h2:nth-of-type(3) + .breakerBar{
		background-color: #D9EDB0;
	}

	h2:nth-of-type(4) + .breakerBar{
		background-color: #B0EDB0;
	}

	h2:nth-of-type(5) + .breakerBar{
		background-color: #B0EDD7;
	}

	h2:nth-of-type(6) + .breakerBar{
		background-color: #B0DAED;
	}

	h2:nth-of-type(7) + .breakerBar{
		background-color: #B0B1ED;
	}

	h2:nth-of-type(8) + .breakerBar{
		background-color: #D4B0ED;
	}

	h2:nth-of-type(9) + .breakerBar{
		background-color: #EDB0E1;
	}
}

.resource{
	position: relative;
	h3, .resourceDescription{
		margin-left: 31px;
	}
	.resourceFavicon{
		position: absolute;
		left: 0;
		top: 0;
		width: 24px;
		height: 24px;
		background: left bottom no-repeat;
	}
}

.publication{

	h3{
		margin-top: 30px;
	}
	p{
		margin-top: 15px;
	}
}

.ui.icon.buttons .button, .ui.icon.button{
	font-family: "Source Sans Pro", sans serif;
	font-weight: 800;
	margin-top: -23px;
}

/* #Footer
================================================== */

footer{
	text-align: center;
	padding-bottom: 60px;
}

/* #Responsive
================================================== */

.mobileTopNav{
	display: none;
	.hamburger{
		img{
			height: 22px;
		}
	}
}

@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
	.sideNav, .desktopTopNav{
		display: none;
	}

	.mobileTopNav{
		display: inline;
	}

	.announcement{
		margin-top: 60px !important;
		padding: 45px 8.5298%;
	}

	.dataTable{
		@include span-columns(10 of 10);
		margin-left: 0 !important;
	}

	.header{
		width: 100%;
		margin: 0;
		padding: 0 8.5298%;
		z-index: 1;
		position: fixed;
		background-color: white;
	}
}

/* #New resource form
================================================== */

.form{
	@include span-columns(6);
	@include shift(3);
	margin-top: 20px;
	margin-bottom: 20px;
	h2{
		text-align: center;
	}
	input, textarea{
		width: 100%;
	}
}

@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
	.form{
		@include span-columns(4);
		@include shift(0);
	}
}


/* #New resource form
================================================== */

/* The Overlay (background) */
.overlay {
    /* Height & width depends on how you want to reveal the overlay (see JS below) */    
    height: 0;
    width: 100%;
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    overflow-x: hidden; /* Disable horizontal scroll */
    transition: 0.3s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
}

/* Position the content inside the overlay */
.overlay-content {
    width: 100%; /* 100% width */
    text-align: center; /* Centered text/links */
    padding-top: 40px;
    h2{
    	margin-top: 30px;
    }
}

/* Position the close button (top right corner) */
.cross {
    position: absolute;
    top: 28px;
    right: 33px;
    img{
    	height: 22px;
    }
}

